# xtensor-io

./: .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  environment-dev.yml  environment.yml  xtensor-io.pc.in  xtensor-ioConfig.cmake.in
.azure-pipelines/: unix-build.yml
.github/workflows/: linux.yml  main.yml
docs/: Doxyfile  environment.yml
docs/source/: api_reference.rst  basic_usage.rst  conf.py  index.rst  installation.rst  releasing.rst  stored_arrays.rst  xhighfive.rst
include/xtensor-io/: xaudio.hpp  xblosc.hpp  xchunk_store_manager.hpp  xdisk_io_handler.hpp  xfile_array.hpp  xgdal.hpp  xgzip.hpp  xhdf5.hpp  xhighfive.hpp  ximage.hpp  ximageio.hpp  xio_aws_handler.hpp  xio_binary.hpp  xio_blosc.hpp  xio_disk_handler.hpp  xio_file.hpp  xio_gcs_handler.hpp  xio_gdal_handler.hpp  xio_gzip.hpp  xio_vsilfile.hpp  xio_zlib.hpp  xnpz.hpp  xtensor-io.hpp  xtensor_io_config.hpp  xtensor_io_config.hpp.in
modules/: FindBlosc.cmake  FindOIIO.cmake  FindSndFile.cmake
notebooks/: chunked_file_array.ipynb  demo.ipynb  file_array.ipynb
test/: CMakeLists.txt  copyGTest.cmake.in  downloadGTest.cmake.in  main.cpp  test-environment.yml  test_xaudio.cpp  test_xblosc.cpp  test_xchunk_store_manager.cpp  test_xfile_array.cpp  test_xgdal.cpp  test_xgzip.cpp  test_xhighfive.cpp  test_ximage.cpp  test_ximageio.cpp  test_xio_aws_handler.cpp  test_xio_binary.cpp  test_xio_blosc.cpp  test_xio_gcs_handler.cpp  test_xio_gdal_handler.cpp  test_xio_gzip.cpp  test_xio_zlib.cpp  test_xnpz.cpp
test/files/: archive.h5  archive.py  compressed.npz  compressed64.npz  test.blosc  test.zl  uncompressed.npz  uncompressed64.npz
tutorial/: CMakeLists.txt  test.cpp
